src/pages/home/components/RoadMap/style.scss
@import '../../../../assets/scss/base';

.roadMap_sec {
  @media (min-width:992px) {
    padding: 110px 0;
  }
}

.road_title {
  @media (min-width:767.99px){
    margin-bottom: 80px;
  }
  @media (max-width:767px){
    margin-bottom: 30px;
  }
  .h2 {
    color:$green-tin-color-600;
  }
}
.line {
  position: $absolute;
  left: calc(-50% + 12px);
  top: 40%;
  width: 100%;
  height: 56px;
  @media (max-width:1200px) {
    height: 75px;
  }
  @media (max-width:767px) {
    display: $none;
  }
}

.roadmap_wrap {
  @media (min-width:1920.99){
    max-width: 1920;
    margin: 0 $auto;
  }
  .slick-arrow {
    @media (min-width:767.99px){
      @include position($absolute, $top:-100px);
    }
    @media (min-width:767.99px){
      @include position($absolute, $top:-100px);
    }
    &.slick{
      &-next {
        @media (min-width:767.99px){
          right:calc(50vw - 720px / 2);
        }
        @media (min-width:991.99px){
          right:calc(50vw - 960px / 2);
        }
        @media (min-width:1200.99px){
          right:calc(50vw - 1140px / 2);
        }
      }
      &-prev {
        left: $auto;
        @media (min-width:767.99px){
          right:calc(50vw - 720px / 2 + 60px);
        }
        @media (min-width:991.99px){
          right:calc(50vw - 960px / 2 + 60px);
        }
        @media (min-width:1200.99px){
          right:calc(50vw - 1140px / 2 + 60px);
        }
      }
    }
  }
  .slick-track {
    @media (min-width:1200.99px){
      @include flexbox;
    }
  }
  .slick-slide {
    // &:first-child {
    //   .timeline-item{
    //     &::before {
    //       display: $none;
    //     }
    //   }
    // }
    &:last-child{
      .timeline-item {
        .timeline_block {
          visibility: $hidden;
          @include opacity (0);
        }
        &::before {
          display: $none;
        }
      }
    }
    &:nth-child(odd){
      .timeline_block {
        top: calc(50% + 30px);
      }
    }
  }
  @media (min-width:1200px){
    .slick-slide {
      &:last-child {
        .timeline_block {
          left: 0;
        }
      }
    }
  }
  .timeline_block {
    @media (min-width:1700px){
      max-width: 90%;
    }
    @media (min-width:767.99px){
      // @include opacity (.7);
      position: $absolute;
      left: calc(5% + 20px);
    }
    .h6 {
      margin-bottom: 3px;
    }
    p {
      margin-top: 3px;
      color: $white-color;
      @include font-size (.875);
      font-weight: $font-medium;
    }
  }

  .timeline-item {
    @media (min-width:767.99px) {
      position: $relative;
    }
    @media (min-width:1750.99px){
      height: 600px;
    }
    @media (min-width:767.99px) and (max-width:1750px){
      height: 420px;
    }
    &::before {
      @media (min-width:767.99px){
        content: '';
        width: 24px;
        height: 24px;
        border: 6px solid $transparent;
        background: $dark-green-color-400;
        filter: drop-shadow(0px 0px 30px rgba(98, 153, 144, 0.75));
        @include border-radius (50%);
        position: $absolute;
        left: 50%;
        z-index: 1;
      }
      @media (min-width:1750.99px){
        top: calc(40% - 7px);
      }
      @media (min-width:1200.99px) and (max-width:1750px){
        top: calc(50% - 47px);
      }
      @media (max-width:1200px){
        top: calc(50% - 44px);
      }
      @media (min-width:991.99px) and (max-width:1024px){
        top: calc(50% - 40px);
      }
      @media (min-width:767.99px) and (max-width:991px){
        top: calc(50% - 37px);
      }
    }
    &.active {
      .timeline_block {
        @include opacity (1);
      }
      &::before {
        @media (min-width:767.99px){
          background-color: $green-tin-color-700;
          border-color: $text-color;
          width: 32px;
          height: 32px;
          top: calc(40% - 10px);
        }
        @media (min-width:767.99px) and (max-width:1670px){
          top: calc(40% - 7px);
        }
      }
      .line {
        path {
          stroke: $text-color;
        }
      }
    }
  }
}

// RoadMap Responsive
@media (max-width:767px){
  .roadmap_wrap {
    padding:0 15px 100px;
    @include flexbox;
    @include flex-direction (column);
    .slick-slide {
      // width: 100%!important;
      // @for $i from 0 through 9 {
      //   &:nth-child(#{$i}) {
      //     padding-left: 7px * $i; // Increase margin by 10px for each nth-child
      //   }
      // }
      &:last-child {
        .timeline-item {
          visibility: $hidden;
          @include opacity (0);
        }
      }
    }
    .timeline-item {
      position: $relative;
      padding-left: 30px;
      max-width: 96%;
      &::before {
        content: '';
        width: 17px;
        height: 17px;
        @include border-radius (50%);
        border: 4px solid $transparent;
        background: $dark-green-color-400;
        @include position($absolute, $left:0, $top:0);
        filter: drop-shadow(0px 0px 30px rgba(98, 153, 144, 0.75));
        z-index: 1;
      }
      &::after {
        content: '';
        width:2px;
        height:100%;
        background-color: $dark-green-color-400;
        @include position($absolute, $left:8px, $top:10px);
        z-index: -1;
      }
      &.active {
        &::before {
          background: $green-tin-color-700;
          border-color: $text-color;
          width: 20px;
          height: 20px;
        }
        &::after {
          background-color: $text-color;
        }
      }
      .timeline_block {
        margin-bottom: 15px;
        .h6 {
          @include font-size (0.938);
        }
      }
    }
  }
}

.roadmap_bg {
  pointer-events: $none;
  @media (min-width:767.99px){
    @include position($absolute, $left:0, $top:-30%);
    width: 100%; height: 100%;
    pointer-events: $none;
  }
  @media (max-width:767px){
    @include position($absolute, $right:0, $top:0%);
  }
}

